--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^16.1.6",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "next": "16.1.6",
     "next-seo": "^7.2.0",
     "react": "19.2.3",
