--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mascoprint-web:
     build:
@@ -24,24 +22,8 @@ services:
       retries: 3
       start_period: 40s
     networks:
-      - mascoprint-network
-
-  # Nginx reverse proxy (optional - uncomment to use)
-  # nginx:
-  #   image: nginx:alpine
-  #   container_name: mascoprint-nginx
-  #   restart: unless-stopped
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  #     - ./nginx/ssl:/etc/nginx/ssl:ro
-  #   depends_on:
-  #     - mascoprint-web
-  #   networks:
-  #     - mascoprint-network
+      - web
 
 networks:
-  mascoprint-network:
-    driver: bridge
+  web:
+    external: true
